test/core/errors/packages_error/zs/default_package_with_path_error/default_package.zs
struct StructureInDefaultPackage
{
    uint32 value;
};
